# -kvadraOS-Desktop-3-

./: .gitignore  CMakeLists.txt  README.md  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/accelerometer_system/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/accelerometer_system/: MainActivity.kt
app/src/main/java/com/example/accelerometer_system/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/accelerometer_system/: ExampleUnitTest.kt
client_a/: android_sensor_source.cpp  main.cpp  sender_client.cpp  sender_client.h
client_b/: main.cpp  processor_client.cpp  processor_client.h
common/: accel_math.h  duplicate_filter.cpp  duplicate_filter.h  module_logger.cpp  module_logger.h  security_config.cpp  security_config.h
gradle/wrapper/: gradle-wrapper.properties
proto/: sensor_data.proto
scripts/: generate_certs.sh
server/: main.cpp  mediator.cpp  mediator.h  service_impl.cpp  service_impl.h
tests/: model_tests.cpp  tls_tests.cpp  unit_tests.cpp
